[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/gfx/sprites/enemy/enemy5.png" type="Texture" id=1]
[ext_resource path="res://assets/gfx/sprites/enemy/enemy4.png" type="Texture" id=2]
[ext_resource path="res://assets/gfx/sprites/enemy/enemy6.png" type="Texture" id=3]
[ext_resource path="res://assets/gfx/sprites/enemy/enemy2.png" type="Texture" id=4]
[ext_resource path="res://assets/gfx/sprites/enemy/enemy9.png" type="Texture" id=5]
[ext_resource path="res://assets/gfx/sprites/enemy/enemy1.png" type="Texture" id=6]
[ext_resource path="res://assets/gfx/sprites/enemy/enemy8.png" type="Texture" id=7]
[ext_resource path="res://scenes/weapons/DamageArea.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/character/enemies/Enemy.gd" type="Script" id=10]
[ext_resource path="res://scripts/character/enemies/EnemySM.gd" type="Script" id=11]
[ext_resource path="res://scenes/weapons/Hitbox.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/gfx/sprites/enemy/enemy7.png" type="Texture" id=13]
[ext_resource path="res://scenes/items/Potion.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/items/Coin.tscn" type="PackedScene" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 6 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=5]
resource_name = "damage"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 354
collision_mask = 96
script = ExtResource( 10 )
scene = [ ExtResource( 14 ), ExtResource( 15 ) ]

[node name="Character" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"

[node name="DamageArea" parent="." instance=ExtResource( 8 )]
damage_amount = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( -4, 3 )
shape = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 12 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 4, 3 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RayCasts"]
position = Vector2( 0, -6 )
enabled = true
cast_to = Vector2( -16, 0 )

[node name="RayCast2D2" type="RayCast2D" parent="RayCasts"]
position = Vector2( 0, 6 )
enabled = true
cast_to = Vector2( -16, 0 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 11 )

[node name="DetectionTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GroundRayCasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="GroundRayCasts"]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 96

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 5 )

[node name="Potion" parent="." instance=ExtResource( 14 )]
visible = false

[node name="Coin" parent="." instance=ExtResource( 15 )]
visible = false

[node name="InvulnerabilityTimer" type="Timer" parent="."]
[connection signal="area_entered" from="DamageArea" to="DamageArea" method="_on_DamageArea_area_entered"]
[connection signal="timeout" from="DetectionTimer" to="StateMachine" method="_on_DetectionTimer_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="StateMachine" method="_on_InvulnerabilityTimer_timeout"]
